Fixing alignments on navbar

--- a/codeup-design.css
+++ b/codeup-design.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
-    margin: none;
+    margin: 0;
+    padding: 0;
 }
 p{
     font-family: 'Anton', sans-serif;
@@ -13,15 +14,6 @@ body {
 img{
     max-width: 100%;
     max-height:100%;
-}
-
-#banner {
-    background-color: white;
-    width: 100%;
-    height: 60px;
-    margin: 40px;
-    position: absolute;
-    z-index: -1;
 }
 
 .container {
@@ -83,11 +75,29 @@ img{
     width: 600px;
 }
 
+#banner {
+    background-color: white;
+    width: 100%;
+    height: 60px;
+    margin-top: 25px;
+    position: absolute;
+    z-index: -1;
+}
+
 /*xs screen*/
 @media screen and (max-width: 575px) {
     .codeup {
         text-align: center;
     }
+
+    .services {
+        margin-left: 2em;
+    }
+
+    .blog {
+        margin-left: 2em;
+    }
+
 
     .project {
         font-size: 16px;
@@ -105,7 +115,6 @@ img{
     .bubbles {
         margin: 0 auto;
         width: 300px;
-        /*padding: 5px;*/
     }
 }
 
@@ -133,13 +142,12 @@ img{
     .blog, .services {
         margin: 0;
     }
+
+
 }
 
 /*lg screen*/
 @media screen and (min-width:992px) {
-    body {
-        padding: 10px;
-    }
     .codeup {
         text-align: left;
     }
@@ -150,6 +158,7 @@ img{
     .blog, .services {
         margin: 0;
     }
+
 }
 
 /*XL screen*/
